--- a/public/css/style.css
+++ b/public/css/style.css
@@ -656,6 +656,14 @@ video {
   margin-top: 1.25rem;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .flex {
   display: flex;
 }
@@ -683,6 +691,34 @@ video {
 
 .h-\[90vh\] {
   height: 90vh;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-\[10rem\] {
+  height: 10rem;
+}
+
+.h-\[15rem\] {
+  height: 15rem;
+}
+
+.h-\[13rem\] {
+  height: 13rem;
 }
 
 .w-64 {
@@ -732,6 +768,50 @@ video {
 
 .w-6\/12 {
   width: 50%;
+}
+
+.w-7\/12 {
+  width: 58.333333%;
+}
+
+.w-\[60\%\] {
+  width: 60%;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-\[20\%\] {
+  width: 20%;
+}
+
+.w-\[27\%\] {
+  width: 27%;
+}
+
+.w-\[26\%\] {
+  width: 26%;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .max-w-max {
@@ -933,6 +1013,16 @@ video {
 .bg-\[\#e9e9ee\] {
   --tw-bg-opacity: 1;
   background-color: rgb(233 233 238 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
 .object-cover {
