--- a/public/css/style.css
+++ b/public/css/style.css
@@ -568,6 +568,24 @@ video {
   width: 100%;
 }
 
+.tag-style {
+  margin-right: 0.25rem;
+  margin-bottom: 0.25rem;
+  display: inline-block;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 246 228 / var(--tw-bg-opacity));
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 550;
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .absolute {
   position: absolute;
 }
@@ -584,8 +602,8 @@ video {
   margin-bottom: 0.75rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
+.mb-7 {
+  margin-bottom: 1.75rem;
 }
 
 .mr-2 {
@@ -598,10 +616,6 @@ video {
 
 .mt-3 {
   margin-top: 0.75rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
 }
 
 .mt-5 {
@@ -632,6 +646,10 @@ video {
   height: 13rem;
 }
 
+.h-\[16rem\] {
+  height: 16rem;
+}
+
 .h-\[18rem\] {
   height: 18rem;
 }
@@ -645,12 +663,12 @@ video {
   height: max-content;
 }
 
-.w-3 {
-  width: 0.75rem;
+.w-10\/12 {
+  width: 83.333333%;
 }
 
-.w-3\/4 {
-  width: 75%;
+.w-3 {
+  width: 0.75rem;
 }
 
 .w-5 {
@@ -665,20 +683,20 @@ video {
   width: 20rem;
 }
 
-.w-9\/12 {
-  width: 75%;
-}
-
 .w-\[18rem\] {
   width: 18rem;
 }
 
-.w-\[26\%\] {
-  width: 26%;
+.w-\[20\%\] {
+  width: 20%;
 }
 
 .w-\[30\%\] {
   width: 30%;
+}
+
+.w-\[30rem\] {
+  width: 30rem;
 }
 
 .w-\[60\%\] {
@@ -688,6 +706,14 @@ video {
 .w-max {
   width: -moz-max-content;
   width: max-content;
+}
+
+.w-\[26rem\] {
+  width: 26rem;
+}
+
+.w-\[25rem\] {
+  width: 25rem;
 }
 
 .max-w-max {
@@ -708,6 +734,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-center {
   align-items: center;
 }
@@ -720,16 +750,16 @@ video {
   justify-content: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
 .justify-around {
   justify-content: space-around;
 }
 
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
-.rounded-2xl {
-  border-radius: 1rem;
+.whitespace-normal {
+  white-space: normal;
 }
 
 .rounded-full {
@@ -740,8 +770,9 @@ video {
   border-radius: 0.375rem;
 }
 
-.border-2 {
-  border-width: 2px;
+.rounded-l-md {
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
 }
 
 .border-\[1px\] {
@@ -755,11 +786,6 @@ video {
 .border-slate-100 {
   --tw-border-opacity: 1;
   border-color: rgb(241 245 249 / var(--tw-border-opacity));
-}
-
-.border-slate-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(148 163 184 / var(--tw-border-opacity));
 }
 
 .bg-\[\#070F2B\] {
@@ -782,9 +808,57 @@ video {
   background-color: rgb(233 233 238 / var(--tw-bg-opacity));
 }
 
+.bg-slate-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+
 .bg-slate-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
+.bg-teal-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 118 110 / var(--tw-bg-opacity));
+}
+
+.bg-gradient-to-bl {
+  background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
+.from-\[\#050a53\] {
+  --tw-gradient-from: #050a53 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(5 10 83 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#070F2B\] {
+  --tw-gradient-from: #070F2B var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(7 15 43 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#1B1A55\] {
+  --tw-gradient-from: #1B1A55 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(27 26 85 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.via-10\% {
+  --tw-gradient-via-position: 10%;
+}
+
+.to-\[\#050a53\] {
+  --tw-gradient-to: #050a53 var(--tw-gradient-to-position);
+}
+
+.to-\[\#070F2B\] {
+  --tw-gradient-to: #070F2B var(--tw-gradient-to-position);
 }
 
 .object-cover {
@@ -800,6 +874,10 @@ video {
   padding: 0.75rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-5 {
   padding: 1.25rem;
 }
@@ -813,6 +891,11 @@ video {
   line-height: 2rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -823,21 +906,36 @@ video {
   line-height: 1;
 }
 
+.text-9xl {
+  font-size: 8rem;
+  line-height: 1;
+}
+
 .text-\[2\.5rem\] {
   font-size: 2.5rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .text-slate-100 {
   --tw-text-opacity: 1;
   color: rgb(241 245 249 / var(--tw-text-opacity));
+}
+
+.text-slate-900 {
+  --tw-text-opacity: 1;
+  color: rgb(15 23 42 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
 }
 
 .shadow-md {
@@ -850,6 +948,10 @@ video {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.will-change-transform {
+  will-change: transform;
 }
 
 .hover\:bg-slate-100:hover {
