--- a/src/input.css
+++ b/src/input.css
@@ -6,4 +6,8 @@
     .hover-animation {
         @apply relative after:bg-white after:absolute after:h-1 after:w-0 after:bottom-0 after:left-0 hover:after:w-full after:transition-all after:duration-300 cursor-pointer;
     }
+
+    .tag-style {
+        @apply inline-block bg-teal-200 rounded-full px-2 py-1 text-sm font-[550] text-gray-700 mr-1 mb-1;
+    }
 }
