--- a/public/css/style.css
+++ b/public/css/style.css
@@ -544,6 +544,40 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
 .hover-animation {
   position: relative;
   cursor: pointer;
@@ -598,6 +632,15 @@ video {
   z-index: 10;
 }
 
+.float-start {
+  float: inline-start;
+}
+
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
 .mb-3 {
   margin-bottom: 0.75rem;
 }
@@ -642,16 +685,20 @@ video {
   height: 100vh;
 }
 
-.h-\[13rem\] {
-  height: 13rem;
+.h-\[11rem\] {
+  height: 11rem;
 }
 
-.h-\[16rem\] {
-  height: 16rem;
+.h-\[14rem\] {
+  height: 14rem;
 }
 
 .h-\[18rem\] {
   height: 18rem;
+}
+
+.h-\[8rem\] {
+  height: 8rem;
 }
 
 .h-\[90vh\] {
@@ -663,16 +710,56 @@ video {
   height: max-content;
 }
 
+.h-\[50\%\] {
+  height: 50%;
+}
+
+.h-\[30\%\] {
+  height: 30%;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
+.h-3\/6 {
+  height: 50%;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-5\/6 {
+  height: 83.333333%;
+}
+
+.h-72 {
+  height: 18rem;
+}
+
+.h-96 {
+  height: 24rem;
+}
+
+.h-1\/2 {
+  height: 50%;
+}
+
+.h-1\/4 {
+  height: 25%;
+}
+
 .w-10\/12 {
   width: 83.333333%;
 }
 
-.w-3 {
-  width: 0.75rem;
+.w-2 {
+  width: 0.5rem;
 }
 
-.w-5 {
-  width: 1.25rem;
+.w-3 {
+  width: 0.75rem;
 }
 
 .w-64 {
@@ -683,6 +770,10 @@ video {
   width: 20rem;
 }
 
+.w-\[14\] {
+  width: 14;
+}
+
 .w-\[18rem\] {
   width: 18rem;
 }
@@ -691,12 +782,12 @@ video {
   width: 20%;
 }
 
-.w-\[30\%\] {
-  width: 30%;
+.w-\[25rem\] {
+  width: 25rem;
 }
 
-.w-\[30rem\] {
-  width: 30rem;
+.w-\[30\%\] {
+  width: 30%;
 }
 
 .w-\[60\%\] {
@@ -708,12 +799,80 @@ video {
   width: max-content;
 }
 
-.w-\[26rem\] {
-  width: 26rem;
+.w-\[50\%\] {
+  width: 50%;
 }
 
-.w-\[25rem\] {
-  width: 25rem;
+.w-52 {
+  width: 13rem;
+}
+
+.w-3\/12 {
+  width: 25%;
+}
+
+.w-7\/12 {
+  width: 58.333333%;
+}
+
+.w-4\/12 {
+  width: 33.333333%;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-4\/6 {
+  width: 66.666667%;
+}
+
+.w-72 {
+  width: 18rem;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-\[13rem\] {
+  width: 13rem;
+}
+
+.w-44 {
+  width: 11rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-1\/12 {
+  width: 8.333333%;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.w-2\/4 {
+  width: 50%;
+}
+
+.min-w-7 {
+  min-width: 1.75rem;
 }
 
 .max-w-max {
@@ -758,8 +917,16 @@ video {
   justify-content: space-around;
 }
 
-.whitespace-normal {
-  white-space: normal;
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
+.justify-stretch {
+  justify-content: stretch;
+}
+
+.justify-items-start {
+  justify-items: start;
 }
 
 .rounded-full {
@@ -770,13 +937,16 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-l-md {
-  border-top-left-radius: 0.375rem;
-  border-bottom-left-radius: 0.375rem;
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 
 .border-\[1px\] {
   border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-solid {
@@ -786,6 +956,11 @@ video {
 .border-slate-100 {
   --tw-border-opacity: 1;
   border-color: rgb(241 245 249 / var(--tw-border-opacity));
+}
+
+.border-red-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(185 28 28 / var(--tw-border-opacity));
 }
 
 .bg-\[\#070F2B\] {
@@ -866,6 +1041,10 @@ video {
      object-fit: cover;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -882,6 +1061,11 @@ video {
   padding: 1.25rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -894,11 +1078,6 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }
 
 .text-6xl {
@@ -948,10 +1127,6 @@ video {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.will-change-transform {
-  will-change: transform;
 }
 
 .hover\:bg-slate-100:hover {
