--- a/public/css/style.css
+++ b/public/css/style.css
@@ -544,40 +544,6 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.container {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
 .hover-animation {
   position: relative;
   cursor: pointer;
@@ -617,7 +583,7 @@ video {
   line-height: 1.25rem;
   font-weight: 550;
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+  color: rgb(51 65 85 / var(--tw-text-opacity));
 }
 
 .absolute {
@@ -630,15 +596,6 @@ video {
 
 .z-10 {
   z-index: 10;
-}
-
-.float-start {
-  float: inline-start;
-}
-
-.my-3 {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
 }
 
 .mb-3 {
@@ -667,6 +624,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.h-1\/4 {
+  height: 25%;
 }
 
 .h-3 {
@@ -710,44 +671,12 @@ video {
   height: max-content;
 }
 
-.h-\[50\%\] {
-  height: 50%;
+.w-1\/2 {
+  width: 50%;
 }
 
-.h-\[30\%\] {
-  height: 30%;
-}
-
-.h-52 {
-  height: 13rem;
-}
-
-.h-3\/6 {
-  height: 50%;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-5\/6 {
-  height: 83.333333%;
-}
-
-.h-72 {
-  height: 18rem;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-1\/2 {
-  height: 50%;
-}
-
-.h-1\/4 {
-  height: 25%;
+.w-1\/4 {
+  width: 25%;
 }
 
 .w-10\/12 {
@@ -794,85 +723,13 @@ video {
   width: 60%;
 }
 
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
-}
-
-.w-\[50\%\] {
-  width: 50%;
-}
-
-.w-52 {
-  width: 13rem;
-}
-
-.w-3\/12 {
-  width: 25%;
-}
-
-.w-7\/12 {
-  width: 58.333333%;
-}
-
-.w-4\/12 {
-  width: 33.333333%;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-4\/6 {
-  width: 66.666667%;
-}
-
-.w-72 {
-  width: 18rem;
-}
-
-.w-48 {
-  width: 12rem;
-}
-
-.w-\[13rem\] {
-  width: 13rem;
-}
-
-.w-44 {
-  width: 11rem;
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-96 {
-  width: 24rem;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-1\/12 {
-  width: 8.333333%;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-2\/4 {
-  width: 50%;
-}
-
-.min-w-7 {
-  min-width: 1.75rem;
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
 }
 
 .max-w-max {
@@ -921,14 +778,6 @@ video {
   justify-content: space-evenly;
 }
 
-.justify-stretch {
-  justify-content: stretch;
-}
-
-.justify-items-start {
-  justify-items: start;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
@@ -945,10 +794,6 @@ video {
   border-width: 1px;
 }
 
-.border-2 {
-  border-width: 2px;
-}
-
 .border-solid {
   border-style: solid;
 }
@@ -956,11 +801,6 @@ video {
 .border-slate-100 {
   --tw-border-opacity: 1;
   border-color: rgb(241 245 249 / var(--tw-border-opacity));
-}
-
-.border-red-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(185 28 28 / var(--tw-border-opacity));
 }
 
 .bg-\[\#070F2B\] {
@@ -981,11 +821,6 @@ video {
 .bg-\[\#e9e9ee\] {
   --tw-bg-opacity: 1;
   background-color: rgb(233 233 238 / var(--tw-bg-opacity));
-}
-
-.bg-slate-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
 .bg-slate-500 {
@@ -1106,6 +941,11 @@ video {
 .text-slate-100 {
   --tw-text-opacity: 1;
   color: rgb(241 245 249 / var(--tw-text-opacity));
+}
+
+.text-slate-300 {
+  --tw-text-opacity: 1;
+  color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
 .text-slate-900 {
