--- a/src/input.css
+++ b/src/input.css
@@ -8,6 +8,6 @@
     }
 
     .tag-style {
-        @apply inline-block bg-teal-200 rounded-full px-2 py-1 text-sm font-[550] text-gray-700 mr-1 mb-1;
+        @apply inline-block bg-teal-200 rounded-full px-2 py-1 text-sm font-[550] text-slate-700 mr-1 mb-1;
     }
 }
